@@ -1,5 +1,5 @@
 /*
- * $Id: plot2d.h,v 1.16 2015/07/03 17:20:31 sfeam Exp $
+ * $Id: plot2d.h,v 1.17 2015/10/08 20:01:17 sfeam Exp $
  */
 
 /* GNUPLOT - plot2d.h */
@@ -67,5 +67,7 @@ void cp_extend __PROTO((struct curve_points *cp, int num));
 #include "gadgets.h"
 struct text_label *store_label __PROTO((struct text_label *, struct coordinate *,
 					int i, char * string, double colorval));
+void parse_plot_title __PROTO((struct curve_points *this_plot, 
+					char *xtitle, char *ytitle, TBOOLEAN *set_title));
 
 #endif /* GNUPLOT_PLOT2D_H */
