@@ -1,3 +1,10 @@
+2015-12-21  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/plot2d.h src/plot2d.c (parse_plot_title) src/plot3d.c
+	src/gadgets.c src/gadgets.h docs/gnuplot.doc:
+	Consolidate 2D and 3D code for "[s]plot ... title <options>" into a
+	single routine parse_plot_title.
+
 2015-12-19  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/axis.h src/axis.c (get_position_default) 
@@ -23,7 +30,7 @@
 	* src/axis.c (copy_or_invent_formatstring): Too many fixed precision
 	decimal places, all zero, could be generated by a plot sequence like
 	    set log y; plot [1:100] exp(-x)
-	limit this the number of decimal places to 10.
+	limit the number of decimal places to 10.
 	related to bugs #1496 $1518
 
 2015-12-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
